# sprk

./: Cargo.toml  LICENSE  flake.nix
.github/workflows/: ci.yml
atree-ffi/: Cargo.toml
atree-ffi/include/: atree.h  atree.hpp
atree-ffi/src/: lib.rs
atree-python/: Cargo.toml  pyproject.toml
atree-python/src/: lib.rs
sprk-ffi/: Cargo.toml  README.md
sprk-ffi/include/: sprk.h  sprk.hpp
sprk-ffi/src/: lib.rs
sprk-python/: Cargo.toml  README.md  pyproject.toml
sprk-python/src/: lib.rs
src/: dvec.rs  lib.rs
