[workspace]
members = [".", "sprk-python", "sprk-ffi"]

[workspace.package]
rust-version = "1.88"
version = "0.1.0"
edition = "2024"
description = "High-performance spatial index for radius queries in D-dimensional Euclidean space"
license = "MIT"
repository = "https://github.com/wembed-pdf/sprk"
keywords = ["spatial", "index", "kd-tree", "nearest-neighbor", "simd"]
categories = ["algorithms", "data-structures", "science"]
authors = [
  "Dennis Kobert <dennis@kobert.dev>",
  "Tobias Kempf <kempf.tobias@web.de>",
]



[package]
name = "sprk"
readme = "README.md"
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true


[dependencies]
simd-lookup = { version = "0.1.0", optional = true }
wide = { version = "0.8", optional = true }
num-traits = "0.2"
rayon = { version = "1.10.0", optional = true }
sharded-vec-writer = { version = "0.4.0", optional = true }
faer-svd = { version = "0.17.1", optional = true }
faer-core = { version = "0.17.1", optional = true }
dyn-stack = { version = "0.13.2", optional = true }

[features]
default = ["simd-compress", "svd", "parallel"]
parallel = ["dep:rayon", "dep:sharded-vec-writer"]
simd-compress = ["dep:simd-lookup", "dep:wide"]
svd = ["faer-svd", "faer-core", "dyn-stack"]
internals = []

[dev-dependencies]
sprk = { path = ".", features = ["internals"] }
