[package]
name = "sprk-ffi"
description = "C/C++ bindings for the SPRK-tree spatial index"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
sprk = { version = "0.1.0", path = ".." }
