[package]
name = "sprk-python"
version = "0.1.0"
description = "Python bindings for the SPRK-tree spatial index"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true


[lib]
name = "sprk"
crate-type = ["cdylib"]

[dependencies]
sprk = { version = "0.1.0", path = ".." }
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
